--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "addnote",
         "addstarred",
+        "BASESET",
+        "createnote",
         "devflikr",
         "devnote",
+        "ENCODINGSET",
+        "flikr",
         "gettruenote",
         "linebreak",
         "movetotrash",
@@ -13,6 +17,9 @@
         "removestarred",
         "restoretrash",
         "sharablenote",
+        "sharedlist",
+        "sharednote",
+        "sharekey",
         "sharenote",
         "starredlist",
         "trashforever",
