--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "BASESET",
         "createnote",
         "devflikr",
+        "devflikrapi",
         "devnote",
+        "dotlottie",
         "ENCODINGSET",
         "flikr",
         "gettruenote",
