--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "express": "^4.18.2",
         "express-useragent": "^1.0.15",
         "flikr-utils": "^0.0.1",
+        "https": "^1.0.0",
         "id-shorter": "^0.1.2",
         "mongodb": "^5.7.0",
         "mongoose": "^7.4.1",
