--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "mongodb": "^5.7.0",
         "mongoose": "^7.4.1",
         "morgan": "^1.10.0",
+        "socket.io": "^4.7.2",
         "uuid": "^9.0.0",
         "validator": "^13.9.0"
     },
@@ -62,5 +63,9 @@
         "nodemon": "^3.0.1",
         "rimraf": "^5.0.1",
         "typescript": "^5.1.6"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.8",
+        "utf-8-validate": "^5.0.10"
     }
 }
